--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ out/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+/app/src/main/java/com/example/chatbot/utils/Constants.kt
